examples/fail/polyprint.miniml
let print_id = fun id x is print x;;
